# TrabajoGrado_LuisFHernandez

./: ANEXO_B_AXIOMAS.md  ARQUITECTURA_COMPLETA.md  CAPITULO_6_REDACTADO.md  CAPITULO_7_REDACTADO.md  DIAGRAMAS_TESIS.md  IMPLEMENTATION_RENDER_DEPLOY.md  MANUAL_DE_USUARIO.md  MANUAL_TECNICO.md  ONTOLOGIAS.md  README.md  ngrok.yml  render.yml  test_chat_chain.py  test_debug.py
movie-graph-rag-backend-fastapi/: .dockerignore  .env.example  .gitignore  ARQUITECTURA_FASES.md  CHAT_IMPROVEMENT_CONTEXT.md  CLAUDE_CODE_CONTEXT.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.fuseki  Dockerfile.render  METRICS_REPORT.md  README.md  docker-compose.local.yml  docker-compose.yml  docker-entrypoint-render.sh  docker-setup.ps1  docker-setup.sh  entrypoint.sh  pyproject.toml  render.yml
movie-graph-rag-backend-fastapi/app/: main.py
movie-graph-rag-backend-fastapi/app/api/: dependencies.py
movie-graph-rag-backend-fastapi/app/core/: config.py  connection_explorer.py  conversation_context.py  database.py  fuseki_client.py  metrics.py  scorer.py  (+6 more)
movie-graph-rag-backend-fastapi/fuseki-init/: movies-config.ttl
movie-graph-rag-backend-fastapi/movie_graph_rag_backend_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
movie-graph-rag-backend-fastapi/scripts/: compute_network_metrics.py  patch_imdb_ratings.py  smoke_test_phase10.py  smoke_test_phase11.py  smoke_test_phase4.py  smoke_test_phase5.py  smoke_test_phase6.py  smoke_test_phase7.py  smoke_test_phase8.py  smoke_test_phase9.py  start-backend.ps1  test_context_roles_traceability.py  test_lazy_refresh_activity.py  translate_plot_summaries.py
movie-graph-rag-backend-fastapi/tests/: conftest.py  test_query_strategy.py  test_recommendation_adaptive_weights.py  test_recommendation_endpoints.py  test_scorer_and_prompt.py
(+528 files in other folders)
